force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Commitment__c/agf__ADM_Work_Commitment__c.object-meta.xml
<CustomObject>
    <description>Work items committed to in a sprint</description>
    <label>Work Commitment</label>
    <nameField>
        <displayFormat>WC-{0000000}</displayFormat>
        <label>Work Commitment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Commitments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>