force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Work_Commitment__c/fields/agf__Committed_Story_Points__c.field-meta.xml
<CustomField>
    <fullName>agf__Committed_Story_Points__c</fullName>
    <description>Number of story points assigned to work item when it was committed to in this sprint</description>
    <inlineHelpText>Number of story points assigned to work item when it was committed to in this sprint</inlineHelpText>
    <label>Committed Story Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>